# mpl_stereo

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: builds.yml  publish.yml  tests.yml
docs/: gen_graphics.py  images.py  publishing.md
examples/: stereo_square_images.py
src/mpl_stereo/: AxesStereo.py  StereoSquare.py  __init__.py  example_data.py
tests/: conftest.py  test_AxesStereo.py  test_StereoSquare.py
