[tool.poetry]
name = "mpl_stereo"
version = "0.9.0"
description = "See your matplotlib plots in 3D by making stereograms and anaglyphs"
authors = ["Scott Shambaugh <scottshambaugh@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Framework :: Matplotlib",
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = ">=3.8.2"
numpy = ">=1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.0.0"
flake8 = "^6"
pre-commit = "^3"
mypy = "^1.7"
pillow = ">=10.3.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools", "numpy>=2.0.0"]
