[project]
name = "mpl_stereo"
version = "0.11.0"
description = "See your matplotlib plots in 3D by making stereograms and anaglyphs"
authors = [{ name = "Scott Shambaugh", email = "scottshambaugh@users.noreply.github.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
license = "MIT"
classifiers = ["Framework :: Matplotlib"]
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3,<8",
    "pytest-cov>=4.0.0,<5",
    "flake8>=6,<7",
    "pre-commit>=3,<4",
    "mypy~=1.7",
    "pillow>=10.3.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
